--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7"
