Gestione associazione Patient-Doctor with"Find a Doctor Option" + "Pending Requests", and Doctor users effectively saved in Doctor Table

--- a/services/doctor-service/.env
+++ b/services/doctor-service/.env
@@ -5,3 +5,5 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 JWT_SECRET=supersecretjwt
 USER_SERVICE_URL=http://user-service:8081   # optional, used to enrich public doctor profile
+
+INTERNAL_SERVICE_SECRET=strong_secret
