--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
