CHAT (only small fixes)

--- a/services/appointment-service/.env
+++ b/services/appointment-service/.env
@@ -5,3 +5,5 @@ DB_PASSWORD=postgres
 DB_HOST=postgres-db
 JWT_SECRET=supersecretjwt
 APPOINTMENT_SERVICE_URL = http://appointment-service:8083
+
+INTERNAL_SERVICE_SECRET=strong_secret
