--- a/services/communication-service/.env
+++ b/services/communication-service/.env
@@ -6,7 +6,10 @@ DB_PASSWORD=postgres
 DB_HOST=postgres-db
 JWT_SECRET=supersecretjwt
 
+INTERNAL_SERVICE_SECRET=strong_secret
+
 # API Gateway URL (for internal calls if needed)
 API_GATEWAY_URL=http://localhost:3000
 USER_SERVICE_URL=http://localhost:8081
 APPOINTMENT_SERVICE_URL=http://localhost:8083
+DOCTOR_SERVICE_URL=http://localhost:8082
