--- a/services/communication-service/package.json
+++ b/services/communication-service/package.json
@@ -12,15 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "sequelize": "^6.37.3",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3"
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
