--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
