--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,22 @@ services:
       - ./services/review-service:/usr/src/app
       - /usr/src/app/node_modules
 
+  document-service:
+    build: ./services/document-service
+    ports:
+      - "8085:8085"
+    environment:
+      - PORT=8085
+      - DB_HOST=postgres-db
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=healthsphere
+    volumes:
+      - ./services/document-service/uploads:/app/uploads
+    depends_on:
+      - postgres-db
+
   api-gateway:
     build: ./api-gateway
     ports:
