--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
+    "express-prom-bundle": "^8.0.0",
     "formik": "^2.4.6",
+    "prom-client": "^15.1.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
