--- a/services/appointment-service/package.json
+++ b/services/appointment-service/package.json
@@ -15,7 +15,8 @@
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.1",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+     "express-prom-bundle": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
