--- a/services/doctor-service/package.json
+++ b/services/doctor-service/package.json
@@ -15,6 +15,7 @@
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "jsonwebtoken": "^9.0.0",
+    "express-prom-bundle": "^6.3.0",
     "cors": "^2.8.5"
   },
   "devDependencies": {
