--- a/services/document-service/package.json
+++ b/services/document-service/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
+    "express-prom-bundle": "^6.3.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   },
