--- a/services/review-service/package.json
+++ b/services/review-service/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
+    "express-prom-bundle": "^6.3.0",
+     "prom-client": "^15.0.0",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5"
   },
