--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
+    "express-prom-bundle": "^6.3.0",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7"
   }
