upload prescription doctor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ services:
       - "8082:8082"
     env_file:
       - ./services/doctor-service/.env
+    environment:
+      - JWT_SECRET=supersecretjwt
+      - INTERNAL_SERVICE_SECRET=strong_secret
     depends_on:
       - postgres-db
     volumes:
@@ -89,6 +92,7 @@ services:
       - JWT_SECRET=supersecretjwt
       - USER_SERVICE_URL=http://user-service:8081
       - FRONTEND_URL=http://localhost:3001
+      - INTERNAL_SERVICE_SECRET=strong_secret
     depends_on:
       - postgres-db
 
@@ -103,11 +107,13 @@ services:
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - DB_NAME=healthsphere
+      - INTERNAL_SERVICE_SECRET=strong_secret
+      - JWT_SECRET=supersecretjwt
     depends_on:
       - postgres-db
     #volumes:
-     # - ./services/review-service:/usr/src/app
-     # - /usr/src/app/node_modules
+    # - ./services/review-service:/usr/src/app
+    # - /usr/src/app/node_modules
 
   document-service:
     build: ./services/document-service
@@ -136,7 +142,7 @@ services:
     depends_on:
       - user-service
   # Container per metriche dei container
-  
+
   # Prometheus per raccogliere metriche
   prometheus:
     image: prom/prometheus:v2.50.0
@@ -158,7 +164,6 @@ services:
     depends_on:
       - prometheus
     restart: always
-
 
 volumes:
   pgdata:
